<resources>
    <string name="app_name">Frank Lloyd Wright Trail</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_descripton">Descripton</string>
    <string name="scjohnson">SC Johnson Administration Building and Research Tower</string>
    <string name="wingspread">Wingspread</string>
    <string name="monona_terrace">Monona Terrace</string>
    <string name="meeting_house">First Unitarian Society Meeting House</string>
    <string name="visitor_center">Taliesin and FLW Visitor Center</string>
    <string name="german_warehouse">A.D. German Warehouse</string>
    <string name="valley_school">Wyoming Valley School</string>
    <string name="built_homes">American System-Built Homes</string>
    <string name="user">Home</string>
    <string name="scjohnson_short">SC Johnson</string>
    <string name="visitor_center_short">Taliesin</string>
    <string name="meeting_house_short">Meeting House</string>
    <string name="valley_school_short">Valley School</string>
    <string name="german_warehouse_short">German Warehouse</string>
    <string name="built_homes_short">System-Built Homes</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="launch">Launch Google Apps</string>
    <string name="schedule">Schedule a Tour</string>
    <string name="locations">Locations</string>
    <string name="trip_planner">Trip Planner</string>
    <string name="scrapbook">Scrapbook</string>
    <string name="settings">Settings</string>
    <string name="about">About Us</string>
    <string name="choose_destinations">Choose Destinations</string>
    <string name="choose_times">Choose Times</string>
    <string name="trip_options">Trip Options</string>
    <string name="cont">Continue</string>
    <string name="back">Go Back</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="length">Length</string>
    <string name="time_entry">Enter Time</string>
    <string name="date_entry">Enter Date</string>
    <string name="minute_entry">Enter Time in Minutes</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="time_picker_title">Enter Time</string>
    <string name="create_new_trip">Create New Trip</string>
    <string name="new_trip">New Trip</string>
    <string name="trip_length">Time to Location:</string>
    <string name="tour_signup">TOUR SIGNUP</string>
    <string name="signup">Signup</string>
    <string name="tour_date">Date</string>
    <string name="tour_start_time">Start Time</string>
    <string name="tour_end_time">End Time</string>
    <string name="trip_start_time">Start Time</string>
    <string name="trip_end_time">End Time</string>
    <string name="trip_start_date">Start Date</string>
    <string name="trip_end_date">End Date</string>
    <string name="trip_start">TRIP START</string>
    <string name="trip_end">TRIP END</string>
    <string name="trip_name_caps">TRIP NAME</string>
    <string name="trip_name">Trip Name</string>
    <string name="name_entry">Enter Trip Name</string>
    <string name="other_location">Other Stop</string>
    <string name="stop_name">Stop Name</string>
    <string name="trip_stop_caps">STOPS</string>
    <string name="trip_add_stop">Add Stop</string>
    <string name="name_entry_stop">Enter Stop Name</string>
    <string name="scj_built">SC Johnson – Iconic architecture, inspiring tours</string>
    <string name="scj_desc">Designed by Frank Lloyd Wright and opened in 1939, the SC Johnson Administration Building is celebrated as one of the top 25 buildings of the 20th century. From its 43 miles of Pyrex glass tubing to the dendriform columns soaring in the Great Workroom, it is truly a unique work of art that reflects the innovation and adventure that are still the spirit of SC Johnson today. The Administration Building is the only Frank Lloyd Wright commercial building still in use today.
        \n\nThe Research Tower was Frank Lloyd Wright’s vision of a vertical complement to the Administration Building. Opened in 1950, the Research Tower is one of the tallest structures ever built on the cantilever principle. It stands 153 feet tall and its central core, which is 13 feet in diameter, extends 54 feet into the ground. All 15 floors of the Research Tower are supported by the “taproot” core, much like a tree supports its branches. In 2013, the Research Tower went through an extensive 12-month restoration, which involved both exterior and interior updates. The Research Tower was opened to the public for the first time in spring 2014.</string>
    <string name="wingspread_built">Wingspread designed for SC Johnson owner\nHerbert Fisk Johnson, Jr. in 1936</string>
    <string name="wingspread_desc">A private residence Wright designed for SC Johnson owner Herbert Fisk Johnson, Jr. in 1936, Wingspread lives up to its name – a low-slung streamlined brick home with four wings spreading across the property. The central living room, a dome-shaped room, features a 30-foot-tall vertical fireplace and original furniture designed by Wright. Considered the last of the Prairie Houses, it’s filled with unique touches, including a dramatic “Romeo and Juliet” balcony that cantilevers over the landscape and a crow’s nest lookout built above the home, a favorite play place for the Johnson children.</string>
    <string name="monona_terrace_built">Monona Terrace completed in 1997</string>
    <string name="monona_terrace_desc">The story of Monona Terrace began in 1938 when renowned architect Frank Lloyd Wright, then at the height of his international fame, first proposed plans for a “dream civic center” in downtown Madison. His visionary project became mired in political battles that polarized Madison for almost 60 years. Wright’s “long awaited dream of a wedding between the city and beautiful Lake Monona” was finally realized in Monona Terrace.
        \n\nFrank Lloyd Wright’s plan, executed after his death by Lead Architect Anthony Puttnam of Taliesin Architects, was inspired by two key elements of the unique site – the nearby State Capitol and the waterfront. Monona Terrace bears Wright’s signature style with dramatic open spaces, breathtaking views of Lake Monona, and curvilinear forms in interior and exterior details.</string>
    <string name="meeting_house_built">A landmark in church architecture from 1951</string>
    <string name="meeting_house_desc">A landmark in church architecture from 1951, Wright’s ship-like design for the First Unitarian Society, with a sharp prow jutting out from the earth towards the sky, offers a sense of transcendence, one he would often enjoy as a member of the congregation. His extensive use of copper and glass throughout the building provide a timeless feel to the unorthodox house of worship.</string>
    <string name="german_warehouse_built">300 South Church Street – 1917-1921</string>
    <string name="german_warehouse_desc">This massive red brick and concrete building would be impressive in any setting; it is especially so in the small Wisconsin town where Wright was born. Designed in 1915 and constructed between 1917 and 1921 for a local commodity wholesaler, Albert D. German, the four-story warehouse was subsequently used to store sugar, flour, coffee, tobacco and other staples. In the 1970s it was modified to accommodate a gift shop and small theater on the first floor, and an exhibition of large photo murals which illustrate Wright’s architectural work on the second floor. With the demolition of Midway Gardens in Chicago and the Imperial Hotel in Tokyo, it is the only extant example from that decade in which he employed sculptural ornamentation so extensively. The elaborate cast concrete frieze of repeated geometric motifs surrounding the upper portion of the Warehouse foreshadows Wright’s even more extensive integration of structure and ornament in the concrete block residences he designed in the 1920s.</string>
    <string name="visitor_center_sub">Wright’s home, studio, school, and 800-acre agricultural estate</string>
    <string name="visitor_center_desc">Taliesin is the home, studio, school\nand 800-acre agricultural estate of architect Frank Lloyd Wright. Wright built Taliesin on his favorite boyhood hill in the Wisconsin River valley homesteaded by his Welsh grandparents. The estate was his laboratory of organic architecture, with designs from nearly every decade of Wright’s life. The Taliesin residence is the heart of these buildings that Wright designed from 1897 to 1959, including the Romeo and Juliet Windmill, Hillside School, Tan-y-Deri, Midway Barn, and the Frank Lloyd Wright Visitor Center.</string>
    <string name="built_homes_built">Variously built between 1915 and 1917</string>
    <string name="built_homes_desc">In a 1901 speech entitled, “The Art and Craft of the Machine,” Wright outlined his vision of affordable housing. He asserted that the home would have to go to the factory, instead of the skilled labor coming to the building site. Between 1915 and 1917 Wright designed a series of standardized "system-built" homes, known today as the American System-Built Homes. By system-built, he did not mean pre-fabrication off-site, but rather a system that involved cutting the lumber and other materials in a mill or factory, then bringing them to the site for assembly.
        \n\nThis system would save material waste and a substantial fraction of the wages paid to skilled tradesmen. Wright produced 966 working drawings and sketches of various designs for the system. Six examples were constructed, still standing, on West Burnham Street and Layton Boulevard in Milwaukee, Wisconsin. Other examples were constructed on scattered sites throughout the Midwest with a few yet to be discovered.</string>
    <string name="valley_school_built">Designed by Frank Lloyd Wright and built in 1957\nfor the children of Wyoming Valley</string>
    <string name="valley_school_desc">Wyoming Valley School Cultural Arts Center is a nonprofit organization that promotes the arts and culture of the surrounding region by opening the dynamic architecture of Wyoming Valley School to provide incomparable spaces for workshops, performances, lectures, and exhibits for all ages. It also offers space for private functions such as weddings, banquets, business meetings, or other events. Its mission is to maintain and preserve this architectural gem for the continued benefit of and use by the community. Wyoming Valley School is listed on state and national registers of historic places and is located three miles from Wright\'s home, Taliesin, in rural Spring Green, Wisconsin.</string>
    <string name="scj_website">&lt;a href="http://www.scjohnson.com">www.scjohnson.com&lt;/a></string>
    <string name="scj_phone">&lt;a href="tel:+12622602154">(262) 260&#8211;2154&lt;/a></string>
    <string name="wingspread_website">&lt;a href="http://www.johnsonfdn.org/">www.johnsonfdn.org&lt;/a></string>
    <string name="wingspread_phone">&lt;a href="tel:+12626393211">(262) 639&#8211;3211&lt;/a></string>
    <string name="monona_website">&lt;a href="https://www.mononaterrace.com">www.mononaterrace.com&lt;/a></string>
    <string name="monona_phone">&lt;a href="tel:+16082614000">(608) 261&#8211;4000&lt;/a></string>
    <string name="meeting_house_website">&lt;a href="https://fusmadison.org">www.fusmadison.org&lt;/a></string>
    <string name="meeting_house_phone">&lt;a href="tel:+16082339774">(608) 233&#8211;9774&lt;/a></string>
    <string name="visitor_center_website">&lt;a href="http://www.taliesinpreservation.org">www.taliesinpreservation.org&lt;/a></string>
    <string name="visitor_center_phone">&lt;a href="tel:+18775887900">(877) 588&#8211;7900&lt;/a></string>
</resources>