<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Actions">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_locations"
                    android:icon="@drawable/ic_location"
                    android:title="@string/locations" />
                <item
                    android:id="@+id/nav_trip_planner"
                    android:icon="@drawable/ic_trip_planner"
                    android:title="@string/trip_planner" />
                <!--
                <item
                    android:id="@+id/nav_scrapbook"
                    android:icon="@drawable/ic_scrapbook"
                    android:title="@string/scrapbook" />
                 -->
            </group>
        </menu>
    </item>


    <item android:title="Location Details">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_scjohnson"
                    android:icon="@drawable/ic_location_detail"
                    android:title="@string/scjohnson_short" />
                <item
                    android:id="@+id/nav_wingspread"
                    android:icon="@drawable/ic_location_detail"
                    android:title="@string/wingspread"/>
                <item
                    android:id="@+id/nav_monona_terrace"
                    android:icon="@drawable/ic_location_detail"
                    android:title="@string/monona_terrace"/>
                <item
                    android:id="@+id/nav_meeting_house"
                    android:icon="@drawable/ic_location_detail"
                    android:title="@string/meeting_house_short"/>
                <item
                    android:id="@+id/nav_visitor_center"
                    android:icon="@drawable/ic_location_detail"
                    android:title="@string/visitor_center_short"/>
                <item
                    android:id="@+id/nav_german_warehouse"
                    android:icon="@drawable/ic_location_detail"
                    android:title="@string/german_warehouse_short"/>
                <item
                    android:id="@+id/nav_valley_school"
                    android:icon="@drawable/ic_location_detail"
                    android:title="@string/valley_school_short"/>
                <item
                    android:id="@+id/nav_built_homes"
                    android:icon="@drawable/ic_location_detail"
                    android:title="@string/built_homes_short"/>
            </group>
        </menu>
    </item>

    <!--
    <item android:title="Menu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>
    -->

</menu>