<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="appfactory.edu.uwp.franklloydwrighttrail.Fragments.TripPlannerTimesFragment"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/trip_name_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="16dp"
                    android:text="@string/trip_name_caps"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/trip_name_container"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/trip_name"
                    android:textSize="16dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"/>
                <EditText
                    android:id="@+id/trip_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:textSize="16dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/red"
                    android:hint="@string/name_entry"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/trip_stop_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="16dp"
                    android:text="@string/trip_stop_caps"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/add_stop_recycler"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                tools:listitem="@layout/tour_stop_item"/>

            <RelativeLayout
                android:id="@+id/trip_stop_container"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/trip_add_stop"
                    android:textSize="16dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"/>
                <ImageView
                    android:id="@+id/add_stop_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_add"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/trip_start_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="16dp"
                    android:text="@string/trip_start"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/start_time_container"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/trip_start_time"
                    android:textSize="16dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"/>
                <TextView
                    android:id="@+id/start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:textSize="16dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/red"
                    android:text="@string/time_entry"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:background="@color/gray"/>

            <RelativeLayout
                android:id="@+id/start_date_container"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/trip_start_date"
                    android:textSize="16dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"/>
                <TextView
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:textSize="16dp"
                    android:layout_centerVertical="true"
                    android:textColor="@color/red"
                    android:text="@string/date_entry"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/trip_end_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textSize="16dp"
                    android:text="@string/trip_end"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:id="@+id/end_time_container"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/trip_end_time"
                        android:textSize="16dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/gray"/>
                    <TextView
                        android:id="@+id/end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:textSize="16dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/red"
                        android:text="@string/time_entry"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/gray"/>

                <RelativeLayout
                    android:id="@+id/end_date_container"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/trip_end_date"
                        android:textSize="16dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/gray"/>
                    <TextView
                        android:id="@+id/end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:textSize="16dp"
                        android:layout_centerVertical="true"
                        android:textColor="@color/red"
                        android:text="@string/date_entry"/>
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/tour_edit_recycler"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    tools:listitem="@layout/tour_times_item"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>