<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/stop_name_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/stop_name"
            android:textSize="16dp"
            android:layout_centerVertical="true"
            android:textColor="@color/gray"/>
        <EditText
            android:id="@+id/stop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="16dp"
            android:layout_centerVertical="true"
            android:textColor="@color/red"
            android:hint="@string/name_entry_stop"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />

    <RelativeLayout
        android:id="@+id/date_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:hint="@string/tour_date"
            android:textSize="16dp"
            android:layout_centerVertical="true"
            android:textColorHint="@color/gray"/>
        <ImageView
            android:id="@+id/right_arrow_date"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <TextView
            android:id="@+id/tour_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/right_arrow_date"
            android:layout_marginRight="20dp"
            android:textColor="@color/red"
            android:textSize="16dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <RelativeLayout
        android:id="@+id/start_time_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/tour_start_time"
            android:textColor="@color/gray"
            android:textSize="16dp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/right_arrow_start_time"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <TextView
            android:id="@+id/tour_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/right_arrow_start_time"
            android:layout_marginRight="20dp"
            android:textColor="@color/red"
            android:textSize="16dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <RelativeLayout
        android:id="@+id/end_time_container"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/tour_end_time"
            android:textColor="@color/gray"
            android:textSize="16dp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/right_arrow_end_time"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"/>
        <TextView
            android:id="@+id/tour_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/right_arrow_end_time"
            android:layout_marginRight="20dp"
            android:textColor="@color/red"
            android:textSize="16dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

</LinearLayout>